<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/toggleThemeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Toggle Theme"

        app:layout_constraintTop_toBottomOf="@+id/Title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintVertical_bias="0.1"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kfc_title"
        app:layout_constraintTop_toBottomOf="@+id/KFC"
        app:layout_constraintStart_toStartOf="@+id/KFC"
        app:layout_constraintEnd_toEndOf="@+id/KFC" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mcdonalds_title"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="@+id/imageView3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dominos_title"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="@+id/imageView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pizzahut_title"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="@+id/imageView4" />

    <ImageView
        android:id="@+id/KFC"
        android:layout_width="191dp"
        android:layout_height="216dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/kfc"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toStartOf="@+id/imageView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Title"
        tools:ignore="ContentDescription,SpeakableTextPresentCheck" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="197dp"
        android:layout_height="210dp"
        android:src="@drawable/dominos_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/KFC" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="166dp"
        android:layout_height="215dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/mcdonalds_1"
        app:layout_constraintBottom_toBottomOf="@+id/KFC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/KFC"
        app:layout_constraintTop_toTopOf="@+id/KFC"
        tools:ignore="ContentDescription,SpeakableTextPresentCheck" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="207dp"
        android:layout_height="210dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/pizzahut"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/kfc_ratingValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kfc_rating"
        app:layout_constraintStart_toStartOf="@id/textView"
        app:layout_constraintTop_toBottomOf="@id/textView" />

    <TextView
        android:id="@+id/mcd_ratingValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mcdonalds_rating"
        app:layout_constraintStart_toStartOf="@id/textView2"
        app:layout_constraintTop_toBottomOf="@id/textView2" />

    <TextView
        android:id="@+id/dominos_ratingValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dominos_rating"
        app:layout_constraintStart_toStartOf="@id/textView3"
        app:layout_constraintTop_toBottomOf="@id/textView3" />

    <TextView
        android:id="@+id/pizzahut_ratingValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pizzahut_rating"
        app:layout_constraintStart_toStartOf="@id/textView4"
        app:layout_constraintTop_toBottomOf="@id/textView4" />


</androidx.constraintlayout.widget.ConstraintLayout>
